--- a/css/style.css
+++ b/css/style.css
@@ -679,11 +679,16 @@ footer a:hover {
 @media (max-width: 800px) {
     .header-content {
         flex-direction: column;
-        gap: 1rem;
-        padding-bottom: 1rem;
+        gap: 0.5rem;
+        /* padding-bottom: 1rem; */
     }
 
     .search-container {
         width: 100%;
+    }
+
+    #wiki-content {
+        padding: 0 1rem;
+        max-width: 100%;
     }
 }
